Move pointer to outer maven module